--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node ./seed/seed.js"
   },
   "author": "",
   "license": "ISC"
